# Chess-Engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Includes.h  MoveIntegrity.cpp  MoveIntegrity.h  Piece.cpp  Piece.h  main.cpp  renderer.cpp  renderer.h
